add register styles

--- a/client/src/components/styles/common.styl
+++ b/client/src/components/styles/common.styl
@@ -5,8 +5,19 @@ html, body
   font-family: '微软雅黑', 'Helvetica Neue', sans-serif, SimHei
   background-color: #eeeeee
 
+input
+  outline: none
+  
 a
   text-decoration: none
+
+h2
+  width: 400px
+  margin: 0 0 30px
+  font-size: 25px
+  font-weight: 400
+  text-align: center
+  color: #323a45
 
 .btn
   display: inline-block
